implement peers with tests
